@@ -8,6 +8,8 @@ versions of PyAMF.
 
 0.5 (unreleased)
 ----------------
+ - Fixed an issue with Django model AutoFields being set to 0 by the Flex
+   client (Ticket:556)
  - Added support for the collections module. (Ticket:474)
  - Added type checks for class objects. (Ticket:473)
  - GAE FloatProperty can now accept int's without issue (Ticket:609)
